better fix for bootstrap3theme invisible labels which picks up 'theme' color

--- a/themes/bootstrap3theme/less/bootstraptheme.less
+++ b/themes/bootstrap3theme/less/bootstraptheme.less
@@ -252,6 +252,6 @@ ul#controls.controls {
 	right: inherit!important;
 }
 
-.label label{
-	color: black;
+label.label {
+	color: @text-color;
 }
